Use the non-deprecated method for constructing a new default instance